--- a/ansible/roles/nomad/files/server.hcl.j2
+++ b/ansible/roles/nomad/files/server.hcl.j2
@@ -1,5 +1,6 @@
 data_dir = "/etc/nomad.d/server"
 bind_addr = "{{ ansible_eth1.ipv4.address }}"
+log_level = "DEBUG"
 
 server {
   enabled          = true
