--- a/ansible/roles/nomad/files/server.hcl.j2
+++ b/ansible/roles/nomad/files/server.hcl.j2
@@ -1,4 +1,4 @@
-data_dir  = "/etc/nomad.d/server"
+data_dir  = "/var/lib/nomad"
 bind_addr = "{{ ansible_eth1.ipv4.address }}"
 log_level = "DEBUG"
 
